fix for new requirement

--- a/index.html
+++ b/index.html
@@ -52,10 +52,13 @@
 		}
 		.percent-value {
 			color: #FFF;
-      font-size: 40px;
+      font-size: 25px;
       padding: 0;
       margin: 5px auto;
 		}
+    #loading-value{
+      font-size: 40px;
+    }
     @keyframes little-bounce {
       25% {
         transform: translateY(-2px);
@@ -219,7 +222,8 @@
     display: none;
   }
 	</style>
-  <link rel="preload" href="./static/valentin-loop.mp3" as="media">
+  <link rel="preload" href="./static/music1.mp3" as="media">
+  <link rel="preload" href="./static/music2.mp3" as="media">
   <!--<link rel="preload" href="./static/lovely-pop-loop.mp3" as="media">-->
   <link rel="preload" href="./static/swiper.js" as="script">
   <link rel="preload" href="./static/car-big.png" as="image">
