modify for feedback

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
   }
 	</style>
   <link rel="preload" href="./static/music1.mp3" as="media">
-  <link rel="preload" href="./static/music2.mp3" as="media">
+  <!--<link rel="preload" href="./static/music2.mp3" as="media">-->
   <!--<link rel="preload" href="./static/lovely-pop-loop.mp3" as="media">-->
   <link rel="preload" href="./static/swiper.js" as="script">
   <link rel="preload" href="./static/car-big.png" as="image">
