fix loading count font-size

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 			color: #FFF;
       font-size: 25px;
       padding: 0;
-      margin: 5px auto;
+      margin: 15px auto;
 		}
     #loading-value{
-      font-size: 40px;
+      font-size: 32px;
     }
     @keyframes little-bounce {
       25% {
@@ -481,8 +481,7 @@
     </div>
 		<p class="percent-value"><span id="loading-value">20</span>%</p>
 	</div>
-	<div id="app">
-	</div>
+	<div id="app"></div>
   <script type="text/javascript">
     var increaseValue;
     var valueEl = document.querySelector('#loading-value');
