modify by feedback

--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
   <link rel="preload" href="./static/provide.png" as="image">
   <link rel="preload" href="./static/share.png" as="image">
   <link rel="preload" href="./static/music.png" as="image">
+  <link rel="preload" href="./static/music-close.png" as="image">
   <script type="text/javascript">
     var imgList = [
       './static/car-big.png',
@@ -348,6 +349,8 @@
       './static/home-text3.png',
       './static/home-text4.png',
       './static/earth.png',
+      './static/music.png',
+      './static/music-close.png',
       './static/future-longbg.jpg',
       './static/home-bgs.png',
       './static/home-title.png',
@@ -475,8 +478,8 @@
       <div class="wheel">
         <div class="wheel-big left"></div>
         <div class="wheel-big right"></div>
-        <div class="dot small-dot"></div>
-        <div class="dot bid-dot"></div>
+        <!--<div class="dot small-dot"></div>
+        <div class="dot bid-dot"></div>-->
       </div>
     </div>
 		<p class="percent-value"><span id="loading-value">20</span>%</p>
