--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="format-detection" content="telephone=no,email=no,adress=no">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-  <title>SAIC International</title>
+  <title>上汽国际2017年校园招聘全面开启！</title>
   <style type="text/css">
 		html {
 			height: 100%;
@@ -33,10 +33,14 @@
 			width: 100%;
 			height: 100%;
 		}
+.sound {
+	width: 0;
+	height: 0;
+}
 	</style>
-  <link rel="preload" href="./static/music1.mp3" as="media">
+<link rel="preload" href="./static/music1.mp3" as="media">
   <link rel="preload" href="./static/swiper.js" as="script">
-  <link rel="preload" href="./static/car-big.png" as="image">
+  <link rel="preload" href="./static/share.png" as="image">
   <link rel="preload" href="./static/wheel-big.png" as="image">
   <link rel="preload" href="./static/home-buildings.png" as="image">
   <link rel="preload" href="./static/home-text1.png" as="image">
@@ -48,6 +52,10 @@
 </head>
 
 <body>
+	<div style="display:none"><img src="http://srkfytl.gofriend.me/share.jpg" /></div>
+	<div class="sound">
+		 <audio id="music" loop="loop" src="../../static/music1.mp3"></audio>
+	</div>
 	<div id="app"></div>
 </body>
 </html>
